# nonebot-plugin-clovers

./: .gitignore  README.md  pyproject.toml
discarded/qq/group/: __init__.py  main.py  utils.py
nonebot_plugin_clovers/: __init__.py  clovers.py  config.py
nonebot_plugin_clovers/adapters/: main.py  qq.py  satori.py  typing.py  utils.py  v11.py
nonebot_plugin_clovers/adapters/onebot/: v11.py
nonebot_plugin_clovers/adapters/onebot/v11/: main.py  utils.py
nonebot_plugin_clovers/adapters/qq/: all.py  general.py  group.py  guild.py
nonebot_plugin_clovers/adapters/satori/: __init__.py  main.py  utils.py
nonebot_plugin_clovers/adapters/uninfo/: __init__.py  main.py  utils.py
