[project]
name = "nonebot-plugin-clovers"
version = "0.3.7"
description = ""
authors = [{ name = "KarisAya", email = "karisaya@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "nonebot2 (>=2.4.2,<3.0.0)",
    "clovers(>=0.5.0,<0.6.0)",
    "clovers-client>=0.2.6",
]
[project.optional-dependencies]
nonebot_adapter_onebot = ["nonebot-adapter-onebot (>=2.4.6,<3.0.0)"]
nonebot_adapter_qq = ["nonebot-adapter-qq (>=1.6.1,<2.0.0)"]
nonebot_adapter_satori = ["nonebot-adapter-satori (>=0.13.3,<1.0.0)"]
uninfo = [
    "nonebot-plugin-alconna (>=0.58.5,<1.0.0)",
    "nonebot-plugin-uninfo (>=0.8.2,<1.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv.sources]
clovers = { path = "../clovers", editable = true }
clovers-client = { path = "../clovers-client", editable = true }
